# nova-project

./: .gitignore  AGENTS.md  CHANGELOG.md  README.en.md  README.md  build.sh  config.template.toml  config.toml  design-desktop-app.md  design-qa.md  go.mod  go.sum  ideas.md  package.json  pnpm-lock.yaml  src-tauri
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: pr-title.yml  release.yml
cmd/denova/: main.go  main_test.go
cmd/nova/: main.go
config/: agent_context.go  agent_context_test.go  agent_prompts.go  agent_registry.go  agent_registry_test.go  agent_skills.go  agent_tools.go  agent_tools_test.go  config.go  model_profiles.go  settings.go  settings_mutation_test.go  settings_test.go
desktop/tauri/: Cargo.toml  loading.html  tauri.conf.json
desktop/tauri/binaries/skills/automation-config/: SKILL.md
desktop/tauri/binaries/skills/story-memory-config/: SKILL.md
desktop/tauri/binaries/skills/teller-config/: SKILL.md
desktop/tauri/binaries/web/: index.html
desktop/tauri/binaries/web/assets/: index-CHXFPqY0.js  index-DFBuJz--.css
desktop/tauri/icons/: README.md  icon.icns
desktop/tauri/src/: main.rs
docs/status/: actor-state-presets-v2-design.md
internal/agent/: automation.go  builder.go  chat.go  chat_context.go  chat_context_audit.go  chat_stream.go  chat_stream_test.go  chat_test.go  config_manager_agent_config_tools.go  config_manager_tools.go  config_manager_tools_test.go  context_analysis.go  (+43 more)
scripts/: bootstrap.sh  build-tauri-prebuild.sh
web/: package.json  pnpm-lock.yaml
(+478 files in other folders)
