[package]
name = "nova-desktop"
version = "0.1.13"
description = "Nova AI Novel Creation Workspace - Desktop Application"
authors = ["Nova Authors"]
license = "Apache-2.0"
repository = "https://github.com/alfredxw/nova"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
regex = "1"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
